app/assets/stylesheets/homepage.scss
.homepage {
  .homepage-page {
    background-color: #FFFFFF;
    padding: 0px 70px 0px 70px;

    @media (min-width: 992px) {
      padding: 0px 150px 0px 150px;
    }

    .header-container {
      display: flex;
      justify-content: space-between;
      background-color: #FFFFFF;
      font-family: sans-serif;
      padding: 40px 30px 30px 40px;

      @media (min-width: 992px) {
        padding: 40px 0px 40px 0px;
      }

      .logo{
        font-size: 3rem;
        font-weight: bold;
        color: #3cbfab;
        letter-spacing: -1px;

        @media (min-width: 992px) {
          font-size: 2.5rem;
        }

        .logo-end {
          color: #04080F;
        }
      }

      .account-buttons {
        display: flex;
        align-items: center;
        font-size: 2rem;

        @media (min-width: 992px) {
          font-size: 1.5rem;
        }

        a:hover, a:visited, a:link, a:active
        {
          text-decoration: none;
          color: #04080F;
        }

        a:hover {
          text-decoration: underline;
          text-decoration-color: #3cbfab;
        }

        .shared-button {
          padding: 10px 30px 10px 30px;
          font-size: 2rem;

          @media (min-width: 992px) {
            font-size: 1.5rem;
            padding: 5px 30px 5px 30px;
          }
        }

        .login-button {
          padding-right: 20px;
          font-weight: bold;
          color: #04080F;

          a:hover, a:visited, a:link, a:active {
            text-decoration: none;
          }
        }
      }
    }

    .page-content {
      .blurb {
        display: flex;

        .image-container {
          @media (min-width: 992px) {
            flex-basis: 50%;
            overflow: auto; // this stops it from being bigger than its container
            flex-grow: 1; // this stops it from being bigger than its container

            display: flex;
            align-items: center;
            max-width: 100%;
          }

          .image {
            @media (min-width: 992px) {
              max-width: 100%;
              content: url("hiring-image.svg");
            }
          }
        }

        .mobile-image-container {
          @media (max-width: 991px) {
            flex-basis: 50%;
            overflow: auto; // this stops it from being bigger than its container
            flex-grow: 1; // this stops it from being bigger than its container

            display: flex;
            align-items: center;
            max-width: 100%;
          }

          .mobile-image {
            @media (max-width: 991px) {
              max-width: 100%;
              content: url("hiring-image.svg");
            }
          }
        }

        .written {
          flex-basis: 100%;

          @media (min-width: 992px) {
            flex-basis: 50%;
          }
        }

        .tag {
          background-color: rgba(234, 254, 251, 1);
          width: max-content;
          font-size: 1.7rem;
          padding: 10px 20px 10px 20px;
          margin: 20px 0px 40px 0px;

          @media (min-width: 992px) {
            font-size: 1.1rem;
          }
        }

        .headline {
          font-size: 3rem;
          font-weight: bold;
          margin: 80px 0px 80px 0px;

          @media (min-width: 992px) {
            font-size: 2rem;
            margin-bottom: 40px;
          }

          .highlight {
            color: #3cbfab;
          }
        }

        .description {
          font-size: 2rem;
          margin-bottom: 40px;
          display: flex;
          padding: 20px 0px 20px 0px;
          display: flex;

          .text {
            margin-right: 40px;
            flex-basis: 50%;
          }

          @media (min-width: 992px) {
            font-size: 1.2rem;
          }
        }

        .shared-button {
          margin: 35px 0px 30px 0px;
          font-size: 2rem;

          @media (min-width: 992px) {
            font-size: 1.4rem;
            margin: 0px
          }
        }
      }

      .tag-line {
        color: black;
        font-size: 2rem;
        font-weight: bold;
        margin: 20px 0px 40px 0px;

        @media (min-width: 992px) {
          font-size: 1.5rem;
          margin: 50px 0px 40px 0px;
        }
      }

      .job-boards {
        display: flex;
        margin-bottom: 30px;

        div { // all the logos
          overflow: auto; // this stops it from being bigger than its container
          border: solid 1px #04080F;
          width: 150px;
          padding: 20px;

          @media (min-width: 992px) {
            padding: 40px;
          }
        }

        .indeed {
          content: url("indeed.png");
          flex-grow: 1; // this means they will take up remaining space in the container
        }

        .totaljobs {
          content: url("totaljobs.png");
          flex-grow: 1;
        }

        .technojobs {
          content: url("technojobs.png");
          flex-grow: 1;
        }

        .google {
          content: url("google.png");
          flex-grow: 1;
        }

        .reed {
          content: url("reed.png");
          flex-grow: 1;
        }

        .glassdoor {
          content: url("glassdoor.png");
          flex-grow: 1;
        }
      }
    }
  }
}

